--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -112,11 +112,12 @@ assetic:
         lc_base_css:
             inputs:
                 - '@bootstrap_css'
-                - 'bundles/idcultura/css/general.css'
+                - 'bundles/logincidadaocore/css/general.css'
                 - 'bundles/logincidadaocore/css/navbar.css'
                 - 'bundles/logincidadaocore/css/ac.widget.css'
                 - 'bundles/logincidadaocore/css/common.grid.css'
                 - 'bundles/logincidadaocore/css/list.buttons.css'
+                - 'bundles/idcultura/css/general.css'
         lc_logged_css:
             inputs:
                 - '@lc_base_css'
@@ -482,6 +483,8 @@ nelmio_security:
                 - 'http://browser-update.org/'
                 - 'https://www.google.com/'
                 - 'https://www.gstatic.com/recaptcha/'
+                - 'http://barra.brasil.gov.br'
+                - 'http://www.google.com/recaptcha/'
                 - 'unsafe-inline'
                 - 'unsafe-eval'
                 - 'self'
@@ -492,8 +495,10 @@ nelmio_security:
                 - 'self'
             font-src:
                 - 'https://themes.googleusercontent.com/'
+                - 'http://barra.brasil.gov.br/static/'
                 - 'self'
             img-src:
+                - 'data:*'
                 - '*'
             frame-src:
                 - 'https://s-static.ak.facebook.com'
@@ -511,6 +516,8 @@ nelmio_security:
                 - 'https://www.google.com/'
                 - 'https://www.gstatic.com/recaptcha/'
                 - 'https://ajax.googleapis.com/'
+                - 'http://barra.brasil.gov.br'
+                - 'http://barra.brasil.gov.br/static/'
                 - 'unsafe-inline'
                 - 'unsafe-eval'
                 - 'self'
