--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+app/config/parameters.yml
 app/cache/*
 app/logs/*
 nbproject/
@@ -6,3 +7,4 @@ web/bundles/
 web/css/
 web/js/
 web/images/
+docker-compose.yml
