--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -227,7 +227,7 @@ fos_user:
               address: %mailer_sender_mail%
               sender_name: %mailer_sender_name%
         form:
-            type: LoginCidadao\CoreBundle\Form\Type\RegistrationFormType
+            type: IdCultura\IdCulturaBundle\Form\Type\RegistrationFormType
             validation_groups:  [LoginCidadaoRegistration]
     profile:
         form:
@@ -327,6 +327,9 @@ parameters:
     oauth2.user_provider.class: LoginCidadao\CoreBundle\Security\OIDC\UserProvider
     organization.class: LoginCidadao\OAuthBundle\Entity\Organization
     oauth_client.class: LoginCidadao\OAuthBundle\Entity\Client
+
+    # ID Cultura
+    lc.person.registration.form.type.class: IdCultura\IdCulturaBundle\Form\Type\RegistrationFormType
 
 beelab_recaptcha2:
     site_key: "%recaptcha_public_key%"
