--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "traefik.frontend.rule=Host:lc.local.dona.to"
     links:
       - db:logincidadao_db
+      - lc_memcached:lc_memcached
     volumes:
       - ./app:/var/www/html/app
       - ./src:/var/www/html/src
@@ -26,6 +27,13 @@ services:
       POSTGRES_USER: logincidadao
       POSTGRES_PASSWORD: logincidadao
       POSTGRES_DB: logincidadao
+    volumes:
+      - ./app/cache/pgdata:/var/lib/postgresql/data
+    networks:
+      - router
+
+  lc_memcached:
+    image: memcached
     networks:
       - router
 
